add typescript doc

--- a/docs/howtos/DataPlane Generation - DPG/09versioning.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/09versioning.mdx
@@ -79,7 +79,7 @@ ServiceClient client = new ServiceClient(endpoint, options);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-
+// there's no apiVersion defined in the all the operations, TypeScript emitter will ignore it.
 ```
 
 </TabItem>
@@ -214,7 +214,7 @@ Response response = client.StableFunctionality(stableModel);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-
+// there is no apiVersion parameters defined in all operations, TypeScript emitter will ignore it. 
 ```
 
 </TabItem>
@@ -358,7 +358,7 @@ Response response = client.StableFunctionality(stableModel);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-
+// there is no apiVersion parameters defined in all operations, TypeScript emitter will ignore it.
 ```
 
 </TabItem>
@@ -515,7 +515,7 @@ ServiceClient client = new ServiceClient(endpoint, options);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-
+// there is no apiVersion parameters defined in all operations, TypeScript emitter will ignore it.
 ```
 
 </TabItem>
