Fully synced the armCommonDefinitions and Parameters

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -141,7 +141,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
-- [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.LocationResourceParameter)
 - [`ManagedByProperty`](./data-types.md#Azure.ResourceManager.ManagedByProperty)
 - [`ManagedServiceIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedServiceIdentityProperty)
 - [`ManagedSystemAssignedIdentityProperty`](./data-types.md#Azure.ResourceManager.ManagedSystemAssignedIdentityProperty)
@@ -149,7 +148,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ProviderNamespace`](./data-types.md#Azure.ResourceManager.ProviderNamespace)
 - [`ProxyResource`](./data-types.md#Azure.ResourceManager.ProxyResource)
 - [`ResourceGroupLocationResource`](./data-types.md#Azure.ResourceManager.ResourceGroupLocationResource)
-- [`ResourceGroupParameter`](./data-types.md#Azure.ResourceManager.ResourceGroupParameter)
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
 - [`ResourceKindProperty`](./data-types.md#Azure.ResourceManager.ResourceKindProperty)
 - [`ResourceListResult`](./data-types.md#Azure.ResourceManager.ResourceListResult)
@@ -172,19 +170,19 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.CheckNameAvailabilityResponse)
 - [`CustomerManagedKeyEncryption`](./data-types.md#Azure.ResourceManager.CommonTypes.CustomerManagedKeyEncryption)
 - [`Encryption`](./data-types.md#Azure.ResourceManager.CommonTypes.Encryption)
-- [`encryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.encryptionProperties)
+- [`EncryptionProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.EncryptionProperties)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorAdditionalInfo)
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorDetail)
 - [`ErrorResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorResponse)
 - [`ExtendedLocation`](./data-types.md#Azure.ResourceManager.CommonTypes.ExtendedLocation)
-- [`ExtensionResource`](./data-types.md#Azure.ResourceManager.CommonTypes.ExtensionResource)
 - [`Identity`](./data-types.md#Azure.ResourceManager.CommonTypes.Identity)
 - [`IfMatchHeader`](./data-types.md#Azure.ResourceManager.CommonTypes.IfMatchHeader)
 - [`IfNoneMatchHeader`](./data-types.md#Azure.ResourceManager.CommonTypes.IfNoneMatchHeader)
 - [`KeyEncryptionKeyIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.KeyEncryptionKeyIdentity)
 - [`KeyVaultProperties`](./data-types.md#Azure.ResourceManager.CommonTypes.KeyVaultProperties)
-- [`locationData`](./data-types.md#Azure.ResourceManager.CommonTypes.locationData)
+- [`LocationData`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationData)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationParameter)
+- [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.LocationResourceParameter)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagedServiceIdentity)
 - [`ManagementGroupNameParameter`](./data-types.md#Azure.ResourceManager.CommonTypes.ManagementGroupNameParameter)
 - [`Operation`](./data-types.md#Azure.ResourceManager.CommonTypes.Operation)
