Restore extension resource to CommonTypes

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -175,6 +175,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorDetail)
 - [`ErrorResponse`](./data-types.md#Azure.ResourceManager.CommonTypes.ErrorResponse)
 - [`ExtendedLocation`](./data-types.md#Azure.ResourceManager.CommonTypes.ExtendedLocation)
+- [`ExtensionResource`](./data-types.md#Azure.ResourceManager.CommonTypes.ExtensionResource)
 - [`Identity`](./data-types.md#Azure.ResourceManager.CommonTypes.Identity)
 - [`IfMatchHeader`](./data-types.md#Azure.ResourceManager.CommonTypes.IfMatchHeader)
 - [`IfNoneMatchHeader`](./data-types.md#Azure.ResourceManager.CommonTypes.IfNoneMatchHeader)
