Update doc and folder casing reference

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -243,3 +243,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`TagsUpdateModel`](./data-types.md#Azure.ResourceManager.Foundations.TagsUpdateModel)
 - [`TenantBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.TenantBaseParameters)
 - [`TenantScope`](./data-types.md#Azure.ResourceManager.Foundations.TenantScope)
+
+## Azure.ResourceManager.Legacy
+
+### Models
+
+- [`ManagedServiceIdentityV4`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4)
+- [`ManagedServiceIdentityV4Property`](./data-types.md#Azure.ResourceManager.Legacy.ManagedServiceIdentityV4Property)
