--- a/.chronus/changes/arm-lro-opt-2024-5-5-2-57-50.md
+++ b/.chronus/changes/arm-lro-opt-2024-5-5-2-57-50.md
@@ -6,4 +6,4 @@ packages:
   
 ---
 
-- Add support for displaying lro options in typespec-autorest based on lro metadata
+Add support for displaying lro options in typespec-autorest based on lro metadata
