--- a/.chronus/changes/emitter_name-2024-5-3-22-57-49.md
+++ b/.chronus/changes/emitter_name-2024-5-3-22-57-49.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-support new typespec emitter naming rule
+support new typespec emitter naming rule
