add missing entry

--- a/docs/release-notes/release-2024-06-11.md
+++ b/docs/release-notes/release-2024-06-11.md
@@ -61,6 +61,7 @@ This release contains breaking changes and deprecation
 - [#929](https://github.com/Azure/typespec-azure/pull/929) Adding an overload parameter to ResourceNameParameter that allows `name` type to be set to string union type.
 - [#860](https://github.com/Azure/typespec-azure/pull/860) Fix `percentComplete` property on `OperationStatus` should be a float not an int
 - [#979](https://github.com/Azure/typespec-azure/pull/979) Make Resource Properties Bag Updatable
+- [#998](https://github.com/Azure/typespec-azure/pull/998) Adding legacy v4 ManagedServiceIdentity model to avoid breaking changes in specs with mixed v3 and v4 common type reference
 
 ### @azure-tools/typespec-client-generator-core
 
