--- a/.chronus/changes/arm-lro-opt-2024-5-5-19-32-9.md
+++ b/.chronus/changes/arm-lro-opt-2024-5-5-19-32-9.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-autorest"
 ---
 
-Add suppress-lro-options emitter option to control emission of x-ms-long-running-operation-options
+Use emit-lro--options emitter option to control emission of x-ms-long-running-operation-options
