--- a/docs/libraries/azure-core/reference/index.mdx
+++ b/docs/libraries/azure-core/reference/index.mdx
@@ -87,6 +87,7 @@ npm install --save-peer @azure-tools/typespec-azure-core
 - [`AadTokenAuthFlow`](./data-types.md#Azure.Core.AadTokenAuthFlow)
 - [`ArmResourceIdentifierAllowedResource`](./data-types.md#Azure.Core.ArmResourceIdentifierAllowedResource)
 - [`AzureApiKeyAuthentication`](./data-types.md#Azure.Core.AzureApiKeyAuthentication)
+- [`BodyRoot`](./data-types.md#Azure.Core.BodyRoot)
 - [`ClientRequestIdHeader`](./data-types.md#Azure.Core.ClientRequestIdHeader)
 - [`ConditionalRequestHeaders`](./data-types.md#Azure.Core.ConditionalRequestHeaders)
 - [`EmbeddingVector`](./data-types.md#Azure.Core.EmbeddingVector)
