--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -778,7 +778,7 @@ public void register(Schema schema);
 
 ### Using Azure.Core.ResourceOperations template
 
-Resource create and update operations are not impacted by spread since they all have explicit defined body parameter.
+Resource create and update operations are not impacted by spread since they all have explict defined body parameter.
 Only resource action operations are impacted by spread.
 
 If the action parameter is a model, then the model will be spread.
