--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -857,7 +857,7 @@ def scheduleRepairs(self, problem: str, contact: str, *, content_type: str = "ap
 </TabItem>
 </Tabs>
 
-If you want client to keep the model, you could use a wrapper in TypeSpec to explict set the body to prevent spread.
+If you want to keep the model, you could use a wrapper to explict set the body to prevent spread.
 
 <Tabs>
 <TabItem value="typespec" label="TypeSpec" default>
