--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -822,7 +822,7 @@ class RepairResult:
   reason: str
   info: str
 
-def scheduleRepairs(self, problem: str, contact: str, *, content_type: str = "application/json") -> RepairResult:
+def scheduleRepairs(self, widget_name: str, problem: str, contact: str, *, content_type: str = "application/json") -> RepairResult:
   ...
 ```
 
