--- a/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/08methodInputs.mdx
@@ -297,7 +297,7 @@ op upload(...User): void;
 For Python, we will also generate the overloads described in the Http Post section, but omitting for brevity
 
 ```python
-def upload(self, first_name: str, last_name: str, *, content_type: str = "application/json") -> None:
+def upload(self, id: str, first_name: str, last_name: str, *, content_type: str = "application/json") -> None:
   ...
 ```
 
