initialcommit adding overrideClientMethod

--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -49,5 +49,6 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@include`](./decorators.md#@Azure.ClientGenerator.Core.include)
 - [`@internal`](./decorators.md#@Azure.ClientGenerator.Core.internal)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
+- [`@overrideClientMethod`](./decorators.md#@Azure.ClientGenerator.Core.overrideClientMethod)
 - [`@protocolAPI`](./decorators.md#@Azure.ClientGenerator.Core.protocolAPI)
 - [`@usage`](./decorators.md#@Azure.ClientGenerator.Core.usage)
