Update and respond to review comments

--- a/.chronus/changes/fix-patch-2024-5-13-3-36-28.md
+++ b/.chronus/changes/fix-patch-2024-5-13-3-36-28.md
@@ -5,4 +5,4 @@ packages:
   - "@azure-tools/typespec-autorest"
 ---
 
-Fix #383: Generate patch models for common-types
+Fix patch models for common-types
