add missing entry

--- a/docs/release-notes/release-2024-07-16.md
+++ b/docs/release-notes/release-2024-07-16.md
@@ -47,6 +47,7 @@ You can modify the operation name to match existing spec to avoid breaking chang
 - [#955](https://github.com/Azure/typespec-azure/pull/955) Use emit-lro--options emitter option to control emission of x-ms-long-running-operation-options
 - [#955](https://github.com/Azure/typespec-azure/pull/955) Add support for displaying lro options in typespec-autorest based on lro metadata
 - [#1123](https://github.com/Azure/typespec-azure/pull/1123) Removed direct reference to OpenAPI extension `x-ms-azure-resource` in ARM library and replaced with `@Azure.ResourceManager.Private.azureResourceBase` decorator. It is only used internally on base resource types. `autorest` emitter has been updated to check the decorator and still emit `x-ms-azure-resource` extension in swagger.
+- [#1081](https://github.com/Azure/typespec-azure/pull/1166) Allow void in final result for Azure-AsyncOperation header
 
 ### @azure-tools/typespec-azure-resource-manager
 
