--- a/.chronus/changes/xml_usage-2024-6-19-15-33-55.md
+++ b/.chronus/changes/xml_usage-2024-6-19-15-33-55.md
@@ -4,4 +4,4 @@ packages:
   - "@azure-tools/typespec-client-generator-core"
 ---
 
-add xml usage
+add xml usage and change enumvalue arg representation in generic decorators
